# agent-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  agent.granite.local.toml.example  agent.toml  claude-code-agent-build-prompt.md  claude-code-subagent-registry-prompt.md  local_models.toml.example  pyproject.toml
.github/workflows/: ci.yml
agent/: __main__.py  composition.py  config.py
agent/agents/: card.py  composite.py  mock_registry.py  registry.py  subagent_tools.py
agent/core/: entrypoint.py  events.py  interfaces.py  loop.py  messages.py  state.py
agent/mcp/: client.py  permissions.py
agent/memory/: distiller.py  provider.py  sink.py  store.py
agent/models/: base.py
agent/observability/: semconv.py  sink.py
agent/skills/: base.py
agents/: fact_checker.toml  orchestrator.toml  researcher.toml
deploy/: agent.container.toml  compose.yaml
evals/: bridge.py  mock_tools.py  scorers.py  spec.py  suite.py
evals/cases/: subagents.jsonl
evals/tasks/: cases.py  prompt_injection.py  regression.py
mcp_servers/: _runtime.py
mcp_servers/echo_clock/: server.py
mcp_servers/wordcount/: server.py
scripts/: local_model.py  ollama_gguf_path.py
skills/word-limit-check/: SKILL.md
tests/: test_agent_registry.py  test_composite_registry.py  test_memory_provider.py  test_memory_sink.py  test_memory_store.py  test_skeleton.py  test_subagent_adapter.py  test_vertical_slice.py
tests/cassettes/: fact_checker.json  loop_detection.json  orchestrator.json  orchestrator_fact_checker.json  orchestrator_guard.json  prompt_injection.json  researcher.json  researcher_injection.json  wordcount.json
