[project]
name = "agent-runtime"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "inspect-ai>=0.3.80",
    "mcp>=1.27,<2",
    "openai>=1.50",
    "opentelemetry-api>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-sdk>=1.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
]

[dependency-groups]
dev = [
    "pyright>=1.1.380",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pyright]
include = ["agent", "evals", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
